--------------------------------------------------------------------------------
drkns 2025-08-06 19:07:31+01:00 - build 6523

1. Crash on calling GetMsg of OEM plugins.

--------------------------------------------------------------------------------
drkns 2025-08-04 17:24:56+01:00 - build 6522

1. Correction of 6521.1.

--------------------------------------------------------------------------------
drkns 2025-08-03 20:41:44+01:00 - build 6521

1. Refactoring.

2. Adjust CreateFile flags in a few places.

--------------------------------------------------------------------------------
yjh 2025-07-31 22:15:35+03:00 - build 6520

1. SQLite: v3.50.4.

--------------------------------------------------------------------------------
drkns 2025-07-20 10:48:47+01:00 - build 6519

1. Forum: Progress numbers are displayed wrong while copying files with filter.

--------------------------------------------------------------------------------
MZK 2025-07-19 14:29:31-04:00 - build 6518

1. gh-973: Smarter filename for the Find All Editor.

--------------------------------------------------------------------------------
yjh 2025-07-18 01:32:28+03:00 - build 6517

1. SQLite: v3.50.3.

--------------------------------------------------------------------------------
drkns 2025-07-17 22:38:51+01:00 - build 6516

1. Optimize real <-> visual pos calculation some more.

--------------------------------------------------------------------------------
drkns 2025-07-16 22:55:03+01:00 - build 6515

1. Fix editor strings positioning with tabs beyond left border.

2. Optimize real <-> visual pos calculation in corner cases.

--------------------------------------------------------------------------------
drkns 2025-07-14 17:47:41+01:00 - build 6514

1. Correction of 6510.2 & tests.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-07-14 08:42:32+01:00 - build 6513

1. Correction of 6510.2.
