@@ -1,7 +1,12 @@
 --------------------------------------------------------------------------------
+drkns 2025-08-06 21:21:29+01:00 - build 6524
+
+1. Improve 6523: make such GetMsg calls work.
+
+--------------------------------------------------------------------------------
 drkns 2025-08-06 19:07:31+01:00 - build 6523
 
-1. Crash on calling GetMsg of OEM plugins.
+1. Crash on calling GetMsg with IDs of OEM plugins.
 
 --------------------------------------------------------------------------------
 drkns 2025-08-04 17:24:56+01:00 - build 6522
